feat: M1.2 Java tenant 模块（组织管理）
实现多租户隔离机制：
- TenantContext：基于 ThreadLocal 的租户上下文，提供 setOrgId/getOrgId/clear 静态方法
- TenantInterceptor：Spring Web MVC HandlerInterceptor，从 request attribute 读取 orgId 注入 TenantContext
- TenantLineHandlerImpl：MyBatis-Plus TenantLineHandler，自动追加 WHERE org_id = ?（字段名 org_id 与 M1.1 已有字段对齐）
- TenantConstant：忽略表清单（enterprise_organization/sys_user/sys_role/sys_user_role/sys_role_permission/sys_permission/sys_dictionary/sys_config/sys_audit_log/rpa_*/skyvern_*）
- TenantWebMvcConfig：注册 TenantInterceptor 拦截 /** 路径
- MyBatisPlusConfig：按顺序添加 TenantLineInnerInterceptor → PaginationInnerInterceptor

业务模块：
- 实体：OrganizationEO/DepartmentEO/BusinessLineEO（对应 enterprise_organization/enterprise_department/enterprise_business_line）
- Mapper：OrganizationMapper（含 selectByOrgId）/DepartmentMapper/BusinessLineMapper
- DTO：TenantInfoResponse/DepartmentVO/BusinessLineVO
- Service：TenantService 接口 + TenantServiceImpl 实现
- Controller：3 个 API（GET /tenant/info / GET /tenant/departments / GET /tenant/business-lines）

修改文件：
- JwtAuthenticationFilter：解析 token 中的 orgId 暂存到 request attribute
- MyBatisPlusConfig：追加 TenantLineInnerInterceptor

数据库：
- V6__create_tenant_tables.sql：创建 3 张租户表

单元测试：5 个测试类共 33 个用例（TenantContextTest/TenantLineHandlerImplTest/TenantInterceptorTest/TenantServiceImplTest/TenantControllerTest）

联调验证：跨组织数据完全隔离，admin（小楼金融）与 banking_admin（招商银行演示）看不到对方组织的数据